--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Open Pages</title>
+    <title>010thinkers</title>
     <style>
         body{
             background-color: rgb(19, 255, 192);
