--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <small>Click to see article</small>
         <br>
         <a href = "site_map.html" alt = "site page">Site Map</a>
+        <br>
+        <br>
+        <small>Created by Thanatud Boonyaanuchit
+            <br>Copyright © 2022 the 010thinkers. All right reserved.
+        </small>
     </body>
 </head>
 </html>
