--- a/halloffame.html
+++ b/halloffame.html
@@ -89,7 +89,7 @@
         <small class = "left">Writed by Thanatud Boonyaanuchit.<br>Edited on 28 November 2022.</small>
         </br>
         </br>
-        <a href = "index.html" alt = "Homepage"> Return to Homepage</a>
+        <a href = "index2.html" alt = "Homepage"> Return to Homepage</a>
     </body>
     </head>
 </html>
