--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <input type="submit" value="Submit">
     </form>
     </div>
-    <br><a href="index.html" alt = 'Homepage'><button>Go to Homepage</button></a>
+    <br><a href="indext.html" alt = 'Homepage'><button>Go to Homepage</button></a>
     <br>
     <small class = 'center'>Created by Thanatud Boonyaanuchit
         <br>Copyright © 2022 the 010thinkers. All right reserved.
