--- a/index.html
+++ b/index.html
@@ -1,74 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon_Hbd</title>
+    <title>010thinkers</title>
+    <style>
+        body{
+            background-color: rgb(19, 255, 192);
+        }
+        h1{
+            text-align: center;
+            color: darkcyan;
+            font-size: 50px;
+        }
+        p{
+            text-align: center;
+            text-decoration: double;
+            font-size: 20px;
+        }
+        a.right{
+            display: block;
+            text-align: center;
+            color: darkcyan;
+        }
+        a:hover{
+            color: black;
+        }
+        small{
+            display: block;
+            text-align: center;
+            color: darkcyan;
+        }
+    </style>
+    <body>
+        <h1>Thanatud Website</h1>
+        <p>News Update!</p>
+        <a href ="halloffame.html" alt = "halloffame" class = "right">New Site! Hall of Fame</a>
+        <br>
+        <a href="yuthaclick.html" alt = "Tongmee Clicker" class = "right">New Game! Tongmee Clicker(Beta)</a>
+        <img src="ruep/nyan-cat.gif" alt="Nyan Cat" height="600" width = "1500">
+        <p><a href = "page1.html"><img src = "ruep/rock.gif" alt = "Article" style="width:100px;height:100px;"></a></p>
+        <small>Click to see article</small>
+        <br>
+        <a href = "site_map.html" alt = "site page">Site Map</a>
+        <br>
+        <br>
+        <small>Created by Thanatud Boonyaanuchit
+            <br>Copyright © 2022 the 010thinkers. All right reserved.
+        </small>
+    </body>
 </head>
-<style>
-    body{
-        background-image: url('ruep/confetti.webp');
-    }
-    h1{
-        text-align: center;
-        color : orange;
-        font-size: 50px;
-    }
-    p{
-        text-align: center;
-        font-size: 20px;
-    }
-    small.center{
-        display: block;
-        text-align: center;
-    }
-    p.thai{
-        font-family: 'Sarabun', sans-serif;
-        font-size: 10px;
-    }
-    img.center{
-        display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 20%;
-    }
-    .center2{
-        text-align: center;
-    }
-    a{
-        display: block;
-        text-align: center;
-    }
-</style>
-<body>
-    <script>
-        alert("เพจนี้เป็นเพจที่สร้างขึ้นเป็นครั้งแรกของผม ถ้าเกิดมีออะไรผิดพลาด บอกได้ที่: @quentinmood")
-    </script>
-    <h1>Happy Birthday Mon!</h1>
-    <p>Wishes to Mon to have a better life and become a MWIT33 and KVIS9 student!</p>
-    <small class = 'center'>Thanatud Boonyaanuchit, Student at Suankualarb Wittayalai School</small>
-    <div class = 'thai'>
-    <p>"ขอให้เทอรักฉันคนเดียวตลอดป๋าย."</p>
-    </div>
-    <small class = 'center'>Angpao @angonny , Student at Suankularb Wittayalai School</small>
-    <br>
-    <img src = 'ruep/mon.png' alt = 'Mon' width = '150' height = '500' class="center">
-    <br>
-    <br>
-    <form>
-    <div class = 'center2'>
-    <label for = 'Wishes!' class = 'center2'>Wishes to Mon!</label>
-    <br>
-    <br>
-    <input type="text" id = 'wishes' name ='Mon_Hbd'>
-    <input type="submit" value="Submit">
-    </form>
-    </div>
-    <br><a href="indext.html" alt = 'Homepage'><button>Go to Homepage</button></a>
-    <br>
-    <small class = 'center'>Created by Thanatud Boonyaanuchit
-        <br>Copyright © 2022 the 010thinkers. All right reserved.
-    </small>
-</body>
 </html>
