--- a/halloffame.html
+++ b/halloffame.html
@@ -1,95 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Hall of fame</title>
-        <meta charset="UTF-8">
-    <style>
-        body{
-            background-color: black;
-        }
-        h1{
-            text-align: center;
-            color: goldenrod;
-            font-size: 50px;
-        }
-        p{
-            font-style: italic;
-            color: azure;
-            font-size: 25px;
-        }
-        h2{
-            text-align: center;
-            color: #E5E4E2;
-            font-size: 40px;
-        }
-        img.center{
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 25%;
-        }
-        small{
-            display: block;
-            text-align: center;
-            font-style: bold;
-            color: #ffffff;
-        }
-        h3{
-            text-align: center;
-            color: gold;
-            font-size: 40px;
-        }
-        h4{
-            text-align: center;
-            color: silver;
-            font-size: 40px;
-        }
-        h5{
-            text-align: center;
-            color: #CD7F32;
-            font-size: 40px;
-        }
-        small.left{
-            display: block;
-            text-align: left;
-            color: #ffffff;
-        }
-        a{
-            display: block;
-            color: #ffffff;
-            text-align: right;
-        }
-    </style>
-    <body>
-        <h1><b>Hall of fame.</b></h1>
-        <p>Here are the people who have donated to my life in any situation.</p>
-        <h2>Platinum</h2>
-        <img src = "ruep/Chayanon.jpg" alt = "Platinum : Chayanon" width = "400" height="425" class="center">
-        <br>
-        <small><em>"ความลำบากที่เกินทน เวลานอนกรนทำยังไง"</em></small>
-        <small>Chayanon Premsiri, 2007-Present</small>
-        </br>
-        <h3>Gold</h3>
-        <img src = "ruep/Atoua.jpg" alt = "Gold : Atoua" width = "400" height= "425" class="center">
-        <br>
-        <br>
-        <small>Varunegeat Poolsirikul, 2007-Present</small>
-        </br>
-        <h4>Silver</h4>
-        <img src = "ruep/Ket.png" alt = "Silver : Ket" width = "400" height = "425" class="center">
-        <br>
-        <small>Ketsopon Gnamsom, 1998-Present</small>
-        </br>
-        <h5>Bronze</h5>
-        <img src = "ruep/Benz.png" alt = "Bronze : Benz" width = "400" height = "425" class="center">
-        <br>
-        <small>Ovel Ution, 2007-Present</small>
-        <br>
-        <br>
-        <small class = "left">Writed by Thanatud Boonyaanuchit.<br>Edited on 28 November 2022.</small>
-        </br>
-        </br>
-        <a href = "indext.html" alt = "Homepage"> Return to Homepage</a>
-    </body>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/css/halloffame.css">
+    <title>Hall of fame</title>
+</head>
+<body>
+<h1><b>Hall of fame.</b></h1>
+<p>Here are the people who have donated to my life in any situation.</p>
+<h2>Platinum</h2>
+<img src="assets/img/Chayanon.jpg" alt="Platinum : Chayanon" width="400" height="425" class="center">
+<br>
+<small><em>"ความลำบากที่เกินทน เวลานอนกรนทำยังไง"</em></small>
+<small>Chayanon Premsiri, 2007-Present</small>
+<h3>Gold</h3>
+<img src="assets/img/Atoua.jpg" alt="Gold : Atoua" width="400" height="425" class="center">
+<br>
+<br>
+<small>Varunegeat Poolsirikul, 2007-Present</small>
+<h4>Silver</h4>
+<img src="assets/img/Ket.png" alt="Silver : Ket" width="400" height="425" class="center">
+<br>
+<small>Ketsopon Gnamsom, 1998-Present</small>
+<h5>Bronze</h5>
+<img src="assets/img/Benz.png" alt="Bronze : Benz" width="400" height="425" class="center">
+<br>
+<small>Ovel Ution, 2007-Present</small>
+<br>
+<br>
+<small class="left">Writed by Thanatud Boonyaanuchit.<br>Edited on 28 November 2022.</small>
+<a href="indext.html"> Return to Homepage</a>
+</body>
 </html>
