--- a/index.html
+++ b/index.html
@@ -4,71 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <script src="assets/js/index.js" defer></script>
     <title>Mon_Hbd</title>
 </head>
-<style>
-    body{
-        background-image: url('ruep/confetti.webp');
-    }
-    h1{
-        text-align: center;
-        color : orange;
-        font-size: 50px;
-    }
-    p{
-        text-align: center;
-        font-size: 20px;
-    }
-    small.center{
-        display: block;
-        text-align: center;
-    }
-    p.thai{
-        font-family: 'Sarabun', sans-serif;
-        font-size: 10px;
-    }
-    img.center{
-        display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 20%;
-    }
-    .center2{
-        text-align: center;
-    }
-    a{
-        display: block;
-        text-align: center;
-    }
-</style>
 <body>
-    <script>
-        alert("เพจนี้เป็นเพจที่สร้างขึ้นเป็นครั้งแรกของผม ถ้าเกิดมีออะไรผิดพลาด บอกได้ที่: @quentinmood")
-    </script>
-    <h1>Happy Birthday Mon!</h1>
-    <p>Wishes to Mon to have a better life and become a MWIT33 and KVIS9 student!</p>
-    <small class = 'center'>Thanatud Boonyaanuchit, Student at Suankualarb Wittayalai School</small>
-    <div class = 'thai'>
+<h1>Happy Birthday Mon!</h1>
+<p>Wishes to Mon to have a better life and become a MWIT33 and KVIS9 student!</p>
+<small class="center">Thanatud Boonyaanuchit, Student at Suankualarb Wittayalai School</small>
+<div class="thai">
     <p>"ขอให้เทอรักฉันคนเดียวตลอดป๋าย."</p>
+</div>
+<small class="center">Angpao @angonny , Student at Suankularb Wittayalai School</small>
+<br>
+<img src="assets/img/mon.png" alt="Mon" width="261" height="578" class="center">
+<br>
+<br>
+<form>
+    <div class="center2">
+        <label for="wishes" class="center2">Wishes to Mon!</label>
+        <br>
+        <br>
+        <input type="text" id="wishes" name="Mon_Hbd">
+        <input type="submit" value="Submit">
     </div>
-    <small class = 'center'>Angpao @angonny , Student at Suankularb Wittayalai School</small>
-    <br>
-    <img src = 'ruep/mon.png' alt = 'Mon' width = '150' height = '500' class="center">
-    <br>
-    <br>
-    <form>
-    <div class = 'center2'>
-    <label for = 'Wishes!' class = 'center2'>Wishes to Mon!</label>
-    <br>
-    <br>
-    <input type="text" id = 'wishes' name ='Mon_Hbd'>
-    <input type="submit" value="Submit">
-    </form>
-    </div>
-    <br><a href="indext.html" alt = 'Homepage'><button>Go to Homepage</button></a>
-    <br>
-    <small class = 'center'>Created by Thanatud Boonyaanuchit
-        <br>Copyright © 2022 the 010thinkers. All right reserved.
-    </small>
+</form>
+<br><a href="indext.html">
+    <button>Go to Homepage</button>
+</a>
+<br>
+<small class="center">Created by Thanatud Boonyaanuchit
+    <br>Copyright © 2022 the 010thinkers. All right reserved.
+</small>
 </body>
 </html>
