--- a/indext.html
+++ b/indext.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/indext.css">
     <title>010thinkers</title>
-    <style>
-        body{
-            background-color: rgb(19, 255, 192);
-        }
-        h1{
-            text-align: center;
-            color: darkcyan;
-            font-size: 50px;
-        }
-        p{
-            text-align: center;
-            text-decoration: double;
-            font-size: 20px;
-        }
-        a.right{
-            display: block;
-            text-align: center;
-            color: darkcyan;
-        }
-        a:hover{
-            color: black;
-        }
-        small{
-            display: block;
-            text-align: center;
-            color: darkcyan;
-        }
-    </style>
-    <body>
-        <h1>Thanatud Website</h1>
-        <p>News Update!</p>
-        <a href ="halloffame.html" alt = "halloffame" class = "right">New Site! Hall of Fame</a>
-        <br>
-        <a href="yuthaclick.html" alt = "Tongmee Clicker" class = "right">New Game! Tongmee Clicker(Beta)</a>
-        <img src="ruep/nyan-cat.gif" alt="Nyan Cat" height="600" width = "1500">
-        <p><a href = "page1.html"><img src = "ruep/rock.gif" alt = "Article" style="width:100px;height:100px;"></a></p>
-        <small>Click to see article</small>
-        <br>
-        <a href = "site_map.html" alt = "site page">Site Map</a>
-        <br>
-        <br>
-        <small>Created by Thanatud Boonyaanuchit
-            <br>Copyright © 2022 the 010thinkers. All right reserved.
-        </small>
-    </body>
-</head>
+<body>
+<h1>Thanatud Website</h1>
+<p>News Update!</p>
+<a href="halloffame.html" class="right">New Site! Hall of Fame</a>
+<br>
+<a href="yuthaclick.html" class="right">New Game! Tongmee Clicker(Beta)</a>
+<img src="assets/img/nyan-cat.gif" alt="Nyan Cat" height="800" width="1750">
+<p><a href="page1.html"><img src="assets/img/rock.gif" alt="Article" style="width:100px;height:100px;"></a></p>
+<small>Click to see article</small>
+<br>
+<a href="site_map.html">Site Map</a>
+<br>
+<br>
+<small>Created by Thanatud Boonyaanuchit
+    <br>Copyright © 2022 the 010thinkers. All right reserved.
+</small>
+</body>
 </html>
